--- a/conf.d/Dockerfile
+++ b/conf.d/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.5
+FROM python:3.5-alpine
 
 LABEL maintainer="williamyan1024@gmail.com"
 
@@ -12,7 +12,7 @@ RUN pip install --no-cache-dir --upgrade --ignore-installed \
     redis==3.0.1 \
     yarl==1.3.0
 
-EXPOSE 80
+EXPOSE 83
 
 CMD ["python3"]
 
