--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ version: '2'
 
 services:
   rds:
-    image: redis:3.2.11
+    image: redis:3.2.11-alpine
     # ports: 
       # - 6379:6379
     restart: always
   iserv:
     build: ./conf.d
-    image: iserv:3.5
+    image: williamyan/iserv:3.5-alpine
     volumes:
-      - ./:/usr/src/myapp
+      - ./:/usr/src/app
     ports: 
       - 83:83
-    command: python3 /usr/src/myapp/app.py
+    command: python3 /usr/src/app/app.py
     depends_on:
       - rds
     restart: always
