--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       # - 6379:6379
     restart: always
   iserv:
-    build: ./conf.d
+    # build: ./conf.d
     image: williamyan/iserv:3.5-alpine
     volumes:
       - ./:/usr/src/app
